# robotics-meetup

./: LICENSE  README.md
meet_10_Nav2_path_planning/: setup_nav2.md
meet_1_ROS2_into/: Dockerfile  ROS2_intro.md
meet_2_Remap_and_launch/: 0. Intro.md  1. ROS2_naming.md  2. ROS2_name_remapping.md  3. Cmd_arguments.md  4. Joystick_in_ROS2_container.md  5. Launch_file_with_remappring.md  ROS2_naming.md  teleop.launch.py
meet_3_Robot_models/: 0. Intro.md  1. Coordinate_transform_tf2.md  2. Imaginary_robots.md  3. Minimal_URDF_model.md  3. URDF_model.md  4. Inertial_characteristics.md  4. Physics_of_URDF.md
meet_5_ROS2_control/: 1. ROS2_control_intro.md  2. ROS2_controller_manager.md  3. ROS2_control_interfaces.md
meet_5_ROS2_control/assets/my_robot_bringup/: CMakeLists.txt  controller_configuration.yaml  package.xml
meet_5_ROS2_control/assets/my_robot_bringup/config/: controller_configuration.yaml
meet_5_ROS2_control/assets/rrbot_unit2/: CMakeLists.txt  package.xml
meet_5_ROS2_control/assets/rrbot_unit2/rviz/: unit2.rviz
meet_5_ROS2_control/assets/rrbot_unit2/urdf/: rrbot.gazebo  rrbot.xacro
meet_5_ROS2_control/assets/unit2_simulation/: CMakeLists.txt  package.xml
meet_5_ROS2_control/assets/unit2_simulation/launch/: empty_simulation.launch.py  simulation_launch.py  spawn_entity_client.py  spawn_rrbot.launch.py
meet_6_Gazebo_Sim/: 1. Gazebo_zoo.md  2. URDF_Robot_in_Gazebo_Sim.md  3. ROS-Gazebo_bridge.md  4. Robot_Gazebo_tag.md  5. Sensor_plugins.md
meet_6_Gazebo_Sim/assets/robot_description/: package.xml  setup.py
(+11 files in other folders)
